@@ -1,3 +1,12 @@
+2005-02-10  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* FileAccess.cc: more verbose error for NOT_SUPP.
+	* Http.cc: add NOT_SUPP error for MP_LIST mode.
+	* HttpDir.cc, HttpDirXML.cc, HttpDir.h: add support for MP_LIST
+	  transformation into human readable listing.
+	* ftpclass.cc: don't send further commands until data socket is
+	  connected (in sync mode).
+
 2005-02-08  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* FileCopy.cc: split off FileCopyPeerOutputJob.
